<resources>
    <string name="app_name">MAD DeliveryManagmentSystem</string>
    <string name="propic">TODO</string>
    <string name="logo">LOGO</string>
    <string name="delivery_mnagement">Delivery Mnagement</string>
    <string name="manage_deliveryhome">Manage Delivery</string>
    <string name="manage_drivers">Manage Drivers</string>
    <string name="delivery_history">Delivery History</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="order_1">Order 1</string>
    <string name="manage_delivery">Manage Delivery</string>
    <string name="order_2">Order 2</string>
    <string name="order_4">Order 4</string>
    <string name="order_3">Order 3</string>
    <string name="order_5">Order 5</string>
    <string name="customer_name">Customer Name :</string>
    <string name="customer_id">Customer id :</string>
    <string name="customer_address">Customer Address :</string>
    <string name="items">Items</string>
    <string name="item_1">Item 1</string>
    <string name="assign">Assign</string>
    <string name="item_4">Item 4</string>
    <string name="item_3">Item 3</string>
    <string name="item_2">Item 2</string>
    <string name="assign1">Assign</string>
    <string name="driver_1">Driver 1</string>
    <string name="assign_drivers">Assign Drivers</string>
    <string name="driver_3">Driver 3</string>
    <string name="driver_5">Driver 5</string>
    <string name="button">Button</string>
    <string name="assign2">Assign</string>
    <string name="assign3">Assign</string>
    <string name="assign4">Assign</string>
    <string name="driver_2">Driver 2</string>
    <string name="assign5">Assign</string>
    <string name="driver_4">Driver 4</string>
    <string name="driver_l1">Driver 1</string>
    <string name="manage_driverslist">Manage Drivers</string>
    <string name="add_driver_to_system">Add Driver to System</string>
    <string name="remove_driver_from_system">Remove Driver from System</string>
    <string name="upadate_driver">Upadate Driver</string>
    <string name="drivers_of_the_company">Drivers of the company</string>
    <string name="driver_l2">Driver 2</string>
    <string name="driver_l3">Driver 3</string>
    <string name="driver_l4">Driver 4</string>
    <string name="driver_l5">Driver 5</string>
    <string name="dilimage">DilImage</string>
    <string name="orderimage">IMAGEORD</string>
    <string name="dildriv">DRIVERDILL</string>
    <string name="Itembag">ITEMBAG</string>
    <string name="deliveries_management">Delivery Management</string>
    <string name="detailsoforder">Order Details</string>
</resources>