<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2FAB5"
    tools:context=".Driversmanage">

    <TextView
        android:id="@+id/dr1"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:background="#AEC0F8"
        android:text="@string/driver_l1"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="102dp"
        android:layout_height="101dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/presence_invisible"
        tools:srcCompat="?android:attr/listChoiceIndicatorSingle" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="51dp"
        android:layout_height="52dp"
        android:contentDescription="@string/propic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/mandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_driverslist"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/mandi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drivers_of_the_company"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/dr3"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:background="#AEC0F8"
        android:text="@string/driver_l3"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <TextView
        android:id="@+id/dr4"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:background="#AEC0F8"
        android:text="@string/driver_l4"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <TextView
        android:id="@+id/dr5"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:background="#AEC0F8"
        android:text="@string/driver_l5"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />

    <TextView
        android:id="@+id/dr2"
        android:layout_width="133dp"
        android:layout_height="37dp"
        android:background="#AEC0F8"
        android:text="@string/driver_l2"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />

    <Button
        android:id="@+id/button"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:background="#AEC1FA"
        android:text="@string/add_driver_to_system"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/button4"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:background="#AEC1FA"
        android:text="@string/upadate_driver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/button3"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:background="#AEC1FA"
        android:text="@string/remove_driver_from_system"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="170dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="@+id/dr5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563"
        app:srcCompat="@drawable/driver" />

</androidx.constraintlayout.widget.ConstraintLayout>